# utilities

./: .gitignore  DEVELOPER.md  LICENSE  README.md  checks.py  mypy.ini
.github/workflows/: check.yaml  checks.yaml  guestfs_index.yaml  notes.md
copy_unique/: README.md  checks.py  mypy.ini  pyproject.toml  tox.ini
copy_unique/copy_unique/: __init__.py  __main__.py  main.py
copy_unique/tests/: test_copy_unique.py
guestfs_generator/: .gitignore  README.md  mypy.ini  pyproject.toml
guestfs_generator/guestfs_generator/: __init__.py  __main__.py  main.py  utils.py
guestfs_generator/tests/: __init__.py  test_guestfs_generator.py
mw_playlist_generator/: README.md  download_videos.bat  generate_playlist.py  mypy.ini  pyproject.toml  videos_script.ps1
mw_playlist_generator/mw_playlist_generator/: __init__.py  config.py  logging.py  main.py  types.py  utils.py
mw_playlist_generator/tests/: __init__.py  test_version.py
sstatic/: README.md  pyproject.toml
sstatic/sstatic/: __init__.py  __main__.py  sstatic.py
sstatic/tests/: test_sstatic.py
