[tool.poetry]
name = "mw_playlist_generator"
version = "1.0.1"
description = "A youtube-dl wrapper for generating playlists of videos"
authors = ["Matthew Willcockson <matthew@willcockson.family>"]
license = "MIT"
repository = "https://github.com/mawillcockson/utilities/tree/mw_playlist_generator/mw_playlist_generator"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "latest", python = "<3.8"}
youtube_dl = "^2021.1.24"
decli = "^0.5.2"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
pytest-timeout = "^1.4.2"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"
mypy = "^0.800"
tox = "^3.20.1"

[tool.pytest.ini_options]
minversion = "6.2.0" # First version to have easily accessible types
addopts = "--strict-markers"
# I don't plan on leaving parametersets empty
# https://docs.pytest.org/en/stable/reference.html#confval-empty_parameter_set_mark
empty_parameter_set_mark = "fail_at_collect"
log_cli = true
timeout = 60
markers = [
    "select: Temporary mark for selecting specific tests"
]

[tool.isort]
profile = "black"
# Ensures the output doesn't save if the resulting file contains syntax errors
atomic = true
# Add an explicitly defined source path (modules within src paths have their
# imports automatically catorgorized as first_party)
src_paths = ["copy_unique", "tests"]

# Partially from:
# https://github.com/psf/black/blob/master/docs/compatible_configs/pylint/pyproject.toml
[tool.pylint.messages_control]
disable = [
    "wrong-import-order",
    "too-few-public-methods",
    "unsubscriptable-object", # NOTE::FUTURE https://github.com/PyCQA/pylint/issues/3882
]

[tool.pylint.format]
max-line-length = "88"

[tool.poetry.scripts]
generate-playlists = "mw_playlist_generator.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
