[tool.poetry]
name = "sstatic"
version = "0.0.1"
description = "static file server (wrapper for starlette)"
authors = ["Matthew Willcockson <matthew@willcockson.family>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mawillcockson/utilities/sstatic"

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.14.1"
importlib-metadata = {version = "^3.4.0", python = "<3.8"}
aiofiles = "^0.6.0"
uvloop = {version = "^0.14.0", markers = "sys_platform == 'linux'"}
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-timeout = "^1.4.2"
black = "^20.8b1"
isort = "^5.6.4"

[tool.pytest.ini_options]
minversion = "6.2.0" # First version to have easily accessible types
# I don't plan on leaving parametersets empty
# https://docs.pytest.org/en/stable/reference.html#confval-empty_parameter_set_mark
empty_parameter_set_mark = "fail_at_collect"
log_cli = true
timeout = 60

[tool.isort]
profile = "black"
# Ensures the output doesn't save if the resulting file contains syntax errors
atomic = true
# Add an explicitly defined source path (modules within src paths have their
# imports automatically catorgorized as first_party)
src_paths = ["sstatic", "tests"]

[tool.poetry.scripts]
sstatic = "sstatic.sstatic:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
